<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">RTCommon</string>
    
    <!-- title small start -->
    <string name="title">EPMS系统</string>
     <string name="title_login">登录</string>
     <string name="title_back">返回</string>
     <string name="title_search">搜索</string>
     <string name="title_logout">注销</string>
     <string name="title_share">分享</string>
     <string name="title_complete">完成</string>
     <string name="title_takephone">照片</string>
     <string name="title_upload">上传照片</string>
     <string name="hint_user">"你的登录账号"</string>
     <string name="hint_password">你的登录密码</string>
     <string name="inventory_search">项目搜索</string>
     <string name="inventory_myproject">我的项目</string>
     <string name="inventory_projectlog">项目日志</string>
     <string name="inventory_mytask">我的任务</string>
     <string name="title_comment">提交</string>
     
     <string name="message_notify_logreply">日志回复</string>
     <string name="message_notify_taskreplace">任务更新</string>
    <!-- title small end -->

    <!-- 下拉刷新 start-->
    <string name="get_more">More</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="refreshing">Refreshing...</string>
    <string name="updating">Updating：</string>
    <!-- 下拉刷新 end -->
</resources>