<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <!-- 黑色底层 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="53dip"
        android:layout_marginLeft="3dip"
        android:background="@drawable/u4_normal" />
    <!-- 顶部标题栏 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/u6_normal"
        android:orientation="horizontal" >

        <!-- 前面三分之一 -->

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/title_back"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_title_left"
                android:gravity="center"
                android:onClick="onclick"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="7dip"
                    android:gravity="center"
                    android:text="@string/title_back"
                    android:textColor="@android:color/white" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_title_comment"
                android:gravity="center"
                android:onClick="onclick"
                android:visibility="gone" >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="7dip"
                    android:gravity="center"
                    android:text="配置"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>

        <!-- 中间三分之一 -->

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center" >

           
        </LinearLayout>
        <!-- 后面三分之一 -->

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/title_login"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_title_right"
                android:gravity="center"
                android:onClick="onclick"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/title_login"
                    android:textColor="@android:color/white" />
            </LinearLayout>
                        <LinearLayout
                android:id="@+id/title_takephone"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_title_right"
                android:gravity="center"
                android:onClick="onclick"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/title_takephone"
                    android:textColor="@android:color/white" />
            </LinearLayout>
                        <LinearLayout
                android:id="@+id/title_share"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_title_right"
                android:gravity="center"
                android:onClick="onclick"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/title_share"
                    android:textColor="@android:color/white" />
            </LinearLayout>
               <LinearLayout
                android:id="@+id/title_complete"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_title_right"
                android:gravity="center"
                android:onClick="onclick"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/title_complete"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/title_search"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_title_right"
                android:gravity="center_vertical"
                android:onClick="onclick"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="7dp"
                    android:gravity="center"
                    android:text="@string/title_search"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_comment"
                android:layout_width="60dp"
                android:layout_height="30dp"
          
                android:background="@drawable/btn_title_comment"
                android:gravity="center"
                android:onClick="onclick"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="7dip"
                    android:gravity="center"
                    android:text="@string/title_comment"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
             <LinearLayout
                android:id="@+id/ll_review"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_title_comment"
                android:gravity="center"
                android:onClick="onclick"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="7dip"
                    android:gravity="center"
                    android:text="回复"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
            <Button
                android:id="@+id/title_upload"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:background="#cac8c8"
                android:onClick="onclick"
                android:text="@string/title_upload"
                android:visibility="gone" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>